<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>
    <string name="wb_amr_format" translatable="false">AMR-WB</string>
    <string name="aac_format" translatable="false">AAC</string>
    <string name="call_playback_no_app_found_toast">No app could be found for playback of the selected recording.</string>
    <string name="call_recording_failed_message">Failed to start call recording</string>
    <string name="call_recording_starting">Connecting to recording service...</string>
    <string name="call_recording_file_location">Saved call recording to <xliff:g id="filename">%s</xliff:g></string>
    <string name="onscreenCallRecordText">Record call</string>
    <string name="onscreenCallRecordingText">Recording call - <xliff:g id="duration" example="00:10">%1$s</xliff:g></string>
    <string name="onscreenStopCallRecordText">Stop recording</string>
    <string name="recording_time_text">Recording</string>
    <string name="recording_warning_title">Enable call recording?</string>
    <string name="recording_warning_text">Notice: You are responsible for compliance with any laws, regulations and rules that apply to the use of call recording functionality and the use or distribution of those recordings.</string>
    <string name="call_recording_category_key" translatable="false">call_recording_category</string>
    <string name="call_recording_category_title">Call recording</string>
    <string name="call_recording_format_key" translatable="false">call_recording_format</string>
    <string name="call_recording_format">Audio format</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="vibrate_on_ring_title">"Also vibrate for calls</string>
    <string name="dtmf_tone_enable_title">Keypad tones</string>
    <string name="dtmf_tone_length_title">Keypad tone length</string>
    <string-array name="dtmf_tone_length_entries">
        <item>Normal</item>
        <item>Long</item>
    </string-array>
    <string-array name="dtmf_tone_length_entry_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="ringtone_preference_key" translatable="false">button_ringtone_key</string>
    <string name="vibrate_on_preference_key" translatable="false">button_vibrate_on_ring</string>
    <string name="play_dtmf_preference_key" translatable="false">button_play_dtmf_tone</string>
    <string name="dtmf_tone_length_preference_key" translatable="false">button_dtmf_settings</string>
    <string name="a11y_call_duration_format">%1$d %2$s %3$d %4$s</string>
    <string name="a11y_call_duration_short_format">%1$d %2$s</string>
    <string name="a11y_call_incoming_answer_description">Answer</string>
    <string name="a11y_call_incoming_decline_description">Decline</string>
    <string name="a11y_description_incall_label_manage_content">Manage callers</string>
    <string name="a11y_description_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_description_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_description_incoming_call_reject_with_sms">Reject with message</string>
    <string name="a11y_glide_photo_manager_contact_photo_description">Quick contact for ^1</string>
    <string name="a11y_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_incoming_call_reject_with_sms">Reject this call with a message</string>
    <string name="a11y_incoming_call_swipe_gesture_prompt">Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="a11y_incoming_call_swipe_to_answer">Swipe up with two fingers to answer or down to reject the call</string>
    <string name="a11y_new_call_log_entry_full_description_with_phone_account_info">^1, ^2, ^3.</string>
    <string name="a11y_new_call_log_entry_full_description_without_phone_account_info">^1, ^2.</string>
    <string name="a11y_new_call_log_entry_phone_account">on ^1, via ^2</string>
    <string name="a11y_new_call_log_entry_tap_action">expand menu</string>
    <string name="a11y_new_call_log_entry_video_call">make a video call to ^1</string>
    <string name="a11y_new_call_log_entry_voice_call">call ^1</string>
    <string name="a11y_voicemail_entry_call">Call number</string>
    <string name="a11y_voicemail_entry_delete">Delete</string>
    <string name="a11y_voicemail_entry_expand_menu">Expand menu for this voicemail entry</string>
    <string name="a11y_voicemail_entry_pause">Pause</string>
    <string name="a11y_voicemail_entry_play">Play</string>
    <string name="a11y_voicemail_entry_speaker">Speaker</string>
    <string name="about_phone_label">About</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_call_history_description">Call history</string>
    <string name="action_menu_dialpad_button">key pad</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="add_to_contacts">Add contact</string>
    <string name="add_wait">Add wait</string>
    <string name="all_contacts">All contacts</string>
    <string name="all_contacts_empty">"You don't have any contacts yet"</string>
    <string name="all_contacts_empty_add_contact_action">Create new contact</string>
    <string name="allow">Allow</string>
    <string name="always_warn">Show warning every time</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Phone</string>
    <string name="assisted_dialing_country_code_entry">Assisted dialing: Used country code +%1$s</string>
    <string name="assisted_dialing_country_code_entry_failure">Assisted dialing was used</string>
    <string name="assisted_dialing_setting_cc_category_title">Home country</string>
    <string name="assisted_dialing_setting_cc_default_summary">Automatically detected • %1$s</string>
    <string name="assisted_dialing_setting_cc_default_summary_fallback">Automatically detected</string>
    <string name="assisted_dialing_setting_cc_key">assisted_dialing_setting_cc_key</string>
    <string name="assisted_dialing_setting_cc_title">Default home country</string>
    <string name="assisted_dialing_setting_summary">Predict and add a country code when you call while traveling abroad</string>
    <string name="assisted_dialing_setting_title">Assisted dialing</string>
    <string name="assisted_dialing_setting_toggle_key">assisted_dialing_setting_toggle_key</string>
    <string name="audioroute_bluetooth">Bluetooth</string>
    <string name="audioroute_headset">Wired headset</string>
    <string name="audioroute_phone">Phone</string>
    <string name="audioroute_speaker">Speaker</string>
    <string name="block_and_optionally_report_spam">Block/Report spam</string>
    <string name="block_list">Blocked numbers</string>
    <string name="block_number">Block</string>
    <string name="block_number_alert_details">%1$s This call will be reported as spam.</string>
    <string name="block_number_confirmation_message_new_filtering">You will no longer receive calls or texts from this number.</string>
    <string name="block_number_confirmation_message_no_vvm">Calls from this number will be blocked, but the caller may still be able to leave you voicemails.</string>
    <string name="block_number_confirmation_message_vvm">Calls from this number will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_confirmation_title">Block %1$s?</string>
    <string name="block_number_failed_toast">Problem blocking this number</string>
    <string name="block_number_footer_message_no_vvm">Calls from these numbers will be blocked, but they may still be able to leave you voicemails.</string>
    <string name="block_number_footer_message_vvm">Calls from these numbers will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_ok">BLOCK</string>
    <string name="block_report_number_alert_details">You will no longer receive calls from this number.</string>
    <string name="block_report_number_alert_title">Block %1$s?</string>
    <string name="blocked_call_settings_import_button">Import</string>
    <string name="blocked_call_settings_import_description">You previously marked some callers to be automatically sent to voicemail via other apps.</string>
    <string name="blocked_call_settings_view_numbers_button">View Numbers</string>
    <string name="blocked_number_call_log_label">Blocked</string>
    <string name="blocked_numbers_disabled_emergency_desc">Call blocking has been disabled because you contacted emergency services from this phone within the last 48 hours. It will be automatically reenabled once the 48 hour period expires.</string>
    <string name="blocked_numbers_disabled_emergency_header_label">Call blocking temporarily off</string>
    <string name="bottom_nav_count_99_plus">99+</string>
    <string name="bottom_nav_count_9_plus">9+</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bubble_return_to_call">Back to call</string>
    <string name="build_version_key">build_version</string>
    <string name="build_version_label">Build version</string>
    <string name="call">Call</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="write_settings_instructions">To enable this permission:\n\n1. Tap \"Take me to Settings\" below\n2. Find \"Modify system settings\" toggle\n3. Turn ON the toggle switch\n4. Press back to return</string>
    <string name="write_settings_manual_required">This permission requires manual action in Android settings.</string>
    <string name="permission_dialog_title">Permissions Required</string>
    <string name="permission_dialog_message">To provide the best experience, this app needs several permissions to function properly:</string>
    <string name="permission_grant_button">Grant Permissions</string>
    <string name="permission_deny_button">Not Now</string>
    <string name="write_settings_dialog_title">Modify System Settings</string>
    <string name="write_settings_dialog_message">This app needs permission to modify system settings to adjust call-related audio settings for the best calling experience.</string>
    <string name="write_settings_dialog_explanation">You will be directed to system settings where you can grant this permission. This allows the app to optimize volume and audio settings during calls.</string>
    <string name="write_settings_allow_button">Take me to Settings</string>
    <string name="write_settings_cancel_button">Not Now</string>
</resources>